--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div class="productBrandsLogo">
                 <div>
-                    <img class="highlightNone" src="images/chint-logo.png" alt="Chint" title="Chint">
+                    <img src="images/amp-logo.png" alt="Amp" title="Amp">
                 </div>
                 <div>
                     <img src="images/omron-logo.png" alt="Omron" title="Omron">
@@ -100,13 +100,16 @@
                 <div>
                     <img src="images/autonics-logo.png" alt="Autonics" title="Autonics">
                 </div>
+                <div>
+                    <img class="highlightNone" src="images/chint-logo.png" alt="Chint" title="Chint">
+                </div>
 
                 <div>
-                    <img src="images/amp-logo.png" alt="Amp" title="Amp">
-                </div>           
+                    <img src="images/amsamotion-logo.png" alt="Amsamotion" title="Amsamotion">
+                </div>
                 <div>
                     <img src="images/meanwell-logo.png" alt="Mean Well" title="Mean Well">
-                </div>       
+                </div>
             </div>
         </div>
         <br class="highlightNone">
