--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
                 <div>
                     <img src="images/lselectric-logo.png" alt="LS Electric" title="LS Electric">
                 </div>
+                <div>
+                    <img src="images/fatek-logo.png" alt="Fatek" title="Fatek">
+                </div>
             </div>
             
             <center>
