--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                 <h1 class="display-6 fw-normal">
                     Rare Products? No Problem!
                 </h1>
-                <p class="fs-5 text-muted">Let us help you find those hard-to-get items to you.</p>
+                <p class="fs-5 text-muted">Preorder your items with us today!
+                    <br>Let us source those hard-to-get items on your behalf.</p>
             </center>
         </div>
         <br class="highlightNone">
